# libsnark-circuit

./: CMakeLists.txt  Dockerfile  README.md  libsnark-circuit.nix
libsnark-circuit/: CMakeLists.txt
libsnark-circuit/src/: prime_under_16.cpp
src/: CMakeLists.txt  div_by_3.cpp  prime_under_16.cpp  util.hpp
